# zero-btc

./: .gitignore  README.md  configuration.cfg  main.py  pyproject.toml
data/: plot.py
presentation/screens/: __init__.py  inkyphatrbw.py
